--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,5 +1,5 @@
 name: Bug Report
-description: File a bug report
+description: This is a YAML-style issue form
 issue_body: true
 body:
 - type: markdown
